--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^4.17.1",
     "pug": "^2.0.4",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
